<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:id="@+id/linearPart1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="273dp"
            android:background="@color/purple_500">

            <ImageView
                android:layout_width="350dp"
                android:layout_height="190dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="55dp"
                android:src="@drawable/app_logo" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/linearPart2"
        android:layout_below="@+id/linearPart1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/san_francisco"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/purple_500"
            android:gravity="center|center_horizontal"
            android:text="@string/label_welcome"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearPart3"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearPart2"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputMail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_user"
            app:startIconDrawable="@drawable/ic_baseline_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:inputType="textEmailAddress"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_password"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:inputType="textPassword"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearPart4"
        android:layout_below="@+id/linearPart3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/label_start_session"
            android:drawableTint="#fff"
            android:drawableEnd="@drawable/ic_login"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/linearPart5"
        android:layout_below="@+id/linearPart4"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvJoin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/san_francisco"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/purple_500"
            android:gravity="center|center_horizontal"
            android:text="@string/label_newUser"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_below="@+id/linearPart5"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/san_francisco"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center|center_horizontal"
            android:text="@string/label_forgot_password"/>

    </LinearLayout>

</RelativeLayout>